--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.14.1",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "expo-server-sdk": "^4.0.0",
     "express": "^4.19.2",
     "googleapis": "^159.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.10.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "pdf-extraction": "^1.0.2",
     "pg": "^8.12.0",
     "qrcode": "^1.5.3"
   },
