--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon server.js"
   },
   "engines": {
-    "node": "18.x"
+    "node": "18.13.0"
   },
   "keywords": [],
   "author": "",
