--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon server.js"
   },
   "engines": {
-    "node": "18.13.0"
+    "node": "18.x"
   },
   "keywords": [],
   "author": "",
