--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,31 @@
-name: Deploy to Production Server
+name: Build and Deploy Backend
 
-# Kích hoạt workflow khi có push lên nhánh main
 on:
   push:
     branches:
-      - main # Hoặc master, tùy vào nhánh chính của bạn
+      - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: SSH into server and deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
-        script: |
-          cd /var/www/conghaiso/Conghaiso-backend
-          git pull origin main
-          npm install
-          pm2 restart Conghaiso-backend
+      - name: SSH into server and deploy backend
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
+          script: |
+            # Vào thư mục code backend
+            cd /var/www/conghaiso/conghaiso-backend
+
+            # Reset code cho sạch
+            git fetch --all
+            git reset --hard origin/main
+
+            # Cài dependencies
+            npm install --production
+
+            # Restart hoặc start lại service với PM2
+            pm2 restart conghaiso-backend || pm2 start npm --name conghaiso-backend -- run start
