--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "phonghopso-backend",
   "version": "1.0.0",
@@ -19,7 +18,6 @@
     "@google/generative-ai": "^0.14.1",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
-    
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "expo-server-sdk": "^4.0.0",
@@ -28,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.10.0",
     "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "pdf-extraction": "^1.0.2",
     "pg": "^8.12.0",
