--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "expo-server-sdk": "^4.0.0",
     "express": "^4.19.2",
     "googleapis": "^159.0.0",
+    "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.10.0",
     "multer": "^2.0.2",
-    "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "pdf-extraction": "^1.0.2",
     "pg": "^8.12.0",
