--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "node-cron": "^4.2.1",
     "pdf-extraction": "^1.0.2",
     "pg": "^8.12.0",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
