sửa lỗi điểm danh

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.14.1",
+    "@socket.io/redis-adapter": "^8.3.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
