--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "googleapis": "^159.0.0",
     "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
-    "mammoth": "^1.10.0",
+    "mammoth": "^1.11.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "pdf-extraction": "^1.0.2",
     "pg": "^8.12.0",
+    "pgvector": "^0.2.1",
     "qrcode": "^1.5.3",
     "socket.io": "^4.8.1"
   },
